--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 spring.application.name=cashwalk
+
+spring.datasource.url=jdbc:mysql://localhost:3306/cashwalk_db
+spring.datasource.username=root
+spring.datasource.password=1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+logging.level.org.springframework.security=DEBUG
+
+jwt.secret=MySuperSecretKeyThatIsAtLeast32BytesLong!
+# Google Web client ID
+google.clientId=899929648402-bbil6484g4onafr7a44nf53a4189fl3p.apps.googleusercontent.com
+
