--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,4 +14,5 @@ logging.level.org.springframework.security=DEBUG
 jwt.secret=MySuperSecretKeyThatIsAtLeast32BytesLong!
 # Google Web client ID
 google.clientId=899929648402-bbil6484g4onafr7a44nf53a4189fl3p.apps.googleusercontent.com
+spring.sql.init.mode=always
 
