--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,4 +15,7 @@ jwt.secret=MySuperSecretKeyThatIsAtLeast32BytesLong!
 # Google Web client ID
 google.clientId=899929648402-bbil6484g4onafr7a44nf53a4189fl3p.apps.googleusercontent.com
 spring.sql.init.mode=always
+# ?? ?? ??: 10MB
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
 
