--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,30 @@
+# ? ??
 spring.application.name=cashwalk
 
+# ? MySQL ?? ??
 spring.datasource.url=jdbc:mysql://localhost:3306/cashwalk_db
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-
+# ? JPA ??
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.defer-datasource-initialization=true  
+//? ??! data.sql ?? ?? ??
+# ? SQL ???? ?? ?? ??
+spring.sql.init.mode=never
+
+# ? ?? ??
 logging.level.org.springframework.security=DEBUG
 
+# ? JWT ??? ?
 jwt.secret=MySuperSecretKeyThatIsAtLeast32BytesLong!
-# Google Web client ID
+
+# ? Google ??? Web Client ID
 google.clientId=899929648402-bbil6484g4onafr7a44nf53a4189fl3p.apps.googleusercontent.com
-spring.sql.init.mode=always
-# ?? ?? ??: 10MB
+
+# ? ?? ??? ?? (?: ???? ??? ???)
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
-
