마지막 커밋일수도?

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.application.name=cashwalk
 
 # ??? profile ?? (??? dev, EC2? prod)
-spring.profiles.active=dev
+spring.profiles.active=test
 
 # ?? ??? ??
 spring.servlet.multipart.max-file-size=10MB
